<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity"
    android:background="@drawable/home_background"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relative_layout_picture_username"
            android:layout_marginBottom="@dimen/view_spacing"
            >

        <ImageView
            android:layout_width="@dimen/add_picture"
            android:layout_height="@dimen/add_picture"
            android:id="@+id/picture"
            android:src="@drawable/add_picture"
            android:onClick="onClickAddPicture"
            android:contentDescription="@string/add_profile_picture_desc" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:id="@+id/username_home"
                android:layout_toEndOf="@id/picture"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_status_message"
            android:id="@+id/status_message_home"
            android:layout_marginBottom="@dimen/view_spacing"
            android:layout_below="@id/relative_layout_picture_username"
            />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/button_padding"
            android:id="@+id/lets_chat"
            android:text="@string/lets_chat"
            android:textColor="@color/tarsier_font_complementary"
            android:textSize="@dimen/lets_chat_size"
            android:background="@color/tarsier_principal"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/status_message_home"
            android:onClick="onClickLetsChat"
            />

    </RelativeLayout>

</RelativeLayout>