<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.tarsier.tarsier.ui.activity.ChatActivity"
    android:orientation="vertical" >

    <ch.tarsier.tarsier.ui.view.EndlessListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:stackFromBottom="true"
        android:layout_weight="1"
        android:divider="@null">
    </ch.tarsier.tarsier.ui.view.EndlessListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/message_to_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/send_message_hint"
            android:layout_weight="1"
            android:gravity="center_vertical" />

        <ImageButton
            android:id="@+id/sendImageButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_action_send_now"
            android:contentDescription="@string/send_message_image"
            android:layout_gravity="bottom"
            android:onClick="onClickSendMessage" />
    </LinearLayout>

</LinearLayout>
