<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.tarsier.tarsier.ui.activity.NewChatRoomActivity" >

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/chat_room_name"
        android:id="@+id/chat_room_name"
        />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_on_invitation"
        android:id="@+id/join_on_invitation"
        android:layout_below="@+id/chat_room_name"
        android:onClick="onInvitationOnlyCheckboxClicked"
        android:layout_marginTop="15dp"
        android:checked="true"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/information_invitation"
        android:text="@string/information_invitation_close"
        android:layout_below="@id/join_on_invitation"
        />

</RelativeLayout>
